# rust-phpify

./: Cargo.toml  README.md
src/: lib.rs  string.rs
src/array/: array_pop.rs  array_push.rs  array_rand.rs  array_search.rs  array_shift.rs  array_unique.rs  array_unshift.rs  array_walk.rs  mod.rs
src/string/: explode.rs  implode.rs  lcfirst.rs  mod.rs  stripos.rs  strlen.rs  strpos.rs  substr.rs  ucfirst.rs
